fixed some section spacing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -20,10 +20,11 @@
 	background-color: #000;
 	background-size: 100%;
 	color: #FFF;
-}
-
-#header h2 {
-   color: #3ce0ba;
+   h2 {
+     color: #3ce0ba;
+     margin-bottom: 0;
+   }
+   margin-bottom: 0;
 }
 
 
@@ -47,6 +48,7 @@
 
 section {
   border-top: 10px solid #3ce0ba;
+  margin-bottom: 20px;
 }
 
 	
@@ -59,9 +61,11 @@ h1 {
 }
 
 h2 {
-  font-size: 450%;
+  font-size: 430%;
   font-family: League_Gothic, Helvetica, sans-serif;
   text-transform: uppercase;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 h3 {
@@ -78,7 +82,6 @@ ul {
 
 ul li {
   display: inline-block;
-  margin-right: 10px;
 }
 
 .hidden {
@@ -95,8 +98,49 @@ ul li {
   color: #FFF;
 }
 
+#contact-info {
+  margin-top: 500px; text-align: right;
+  
+  li {
+	    margin-right: 15px;
+  }
+
+}
+
 #contact-info a {
   text-decoration: none;
-  font-size: 170%;
+  border-bottom: none;
+  font-size: 200%;
   color: #FFF;
+  
+  &:hover {
+	 color: #FF4B5C;
+  }
+}
+
+a {
+  color: #FF4B5C;
+  
+  &:hover {
+	border-bottom: 1px dashed #FF4B5C;
+	color: #FF4B5C;
+	text-decoration: none;
+  }
+}
+
+.sub-sec {
+  border-top: 3px solid #3ce0ba;
+  border-bottom: none;
+  margin-top: 25px;
+  padding: 8px;
+  
+  h3 {
+	margin-top: 10px;
+	color: #3ce0ba;
+  }
+}
+
+
+.lead:first-child {
+  margin-top: 30px;
 }
